# carbonos

./: .gitee-ci.yml  cleanup_legacy.ps1  docker-compose.db.yml  docker-compose.prod.yml  ecosystem.config.js  package-lock.json  tailwind.config.js  verify_model.py
_legacy_archive/: index.html  package-lock.json  package.json
carbonos/: .gitignore  Dockerfile  docker-compose.yml  next.config.ts  package-lock.json  package.json
carbonos/backend/: Dockerfile  debug_login.py  fix_superuser_raw.py  fix_superuser_role.py  inspect_user_raw.py  list_routes.py  login.json  pyproject.toml  verify_ai.py  verify_charts.py
carbonos/backend/alembic/: env.py
carbonos/backend/alembic/versions/: 001_initial_schema.py  002_add_user_security_columns.py  6253a537f884_restore_tables.py  c7ac7f8360a2_add_audit_logs_and_tenant_configs_tables.py  d19a6213d264_add_is_superuser_and_indexes.py
carbonos/backend/app/: main.py  seed_prod.py
carbonos/backend/app/api/: admin.py  auth.py  carbon.py  dashboard.py  data.py  deps.py  organization.py  survey.py
carbonos/backend/app/core/: config.py  database.py  init_superuser.py  metrics.py  security.py
carbonos/backend/app/core/middleware/: ratelimit.py  tenant.py
carbonos/backend/app/models/: audit.py  carbon.py  energy.py  organization.py  settings.py  survey.py  tenant.py  tenant_config.py  user.py
carbonos/backend/app/schemas/: energy.py  organization.py  user.py
carbonos/backend/app/services/: carbon_engine.py
carbonos/backend/scripts/: seed_demo.py  seed_tenants.py
docs/: CarbonOS_Business_Proposal.md  CarbonOS任务清单.md  (+9 more)
(+81 files in other folders)
